--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -2,6 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+.navbar-fixed {
+  @apply fixed z-[9999] bg-black bg-opacity-70 backdrop-blur-sm;
+  /* box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2); */
+}
+
 .hamburger-line {
   @apply w-[30px] h-[2px] my-2 block bg-[#e2e4e7];
 }
@@ -16,4 +21,94 @@
 
 .hamburger-active > span:nth-child(3) {
   @apply -rotate-45;
+}
+
+.slider {
+  width: 1000px;
+  max-width: 100vw;
+  height: 500px;
+  margin: auto;
+  position: relative;
+  overflow: hidden;
+  margin-top: 20px;
+}
+
+.list {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  display: flex;
+  width: max-content;
+  transition: 1s;
+}
+
+.list img {
+  width: 1000px;
+  max-width: 100vw;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.buttons {
+  position: absolute;
+  top: 45%;
+  left: 5%;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttons button {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #fff5;
+  color: #fff;
+  border: none;
+  font-family: monospace;
+  font-weight: bold;
+}
+
+.dots {
+  position: absolute;
+  bottom: 10px;
+  color: #fff;
+  left: 0;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+
+.dots li {
+  width: 10px;
+  height: 10px;
+  background-color: #fff;
+  margin: 20px;
+  border-radius: 20px;
+  transition: 1s;
+}
+
+.dots li.active {
+  width: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .slider {
+    width: 400px;
+    height: 300px;
+  }
+
+  .list img {
+    width: 400px;
+  }
+
+  .dots li {
+    margin: 13px;
+    border-radius: 20px;
+    transition: 1s;
+  }
 }
