--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -642,6 +642,10 @@ video {
   margin-right: 2.5rem;
 }
 
+.mr-5 {
+  margin-right: 1.25rem;
+}
+
 .mt-4 {
   margin-top: 1rem;
 }
@@ -935,12 +939,12 @@ video {
 
 @media screen and (max-width: 768px) {
   .slider {
-    width: 400px;
-    height: 300px;
+    width: 340px;
+    height: 280px;
   }
 
   .list img {
-    width: 400px;
+    width: 340px;
   }
 
   .dots li {
