--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -2,35 +2,145 @@
 @tailwind components;
 @tailwind utilities;
 
-.navbar-fixed {
-  @apply fixed z-[9999] bg-black bg-opacity-70 backdrop-blur-sm;
-  /* box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2); */
+/*===== BASE =====*/
+*,
+::before,
+::after {
+  box-sizing: border-box;
 }
 
-.hamburger-line {
-  @apply w-[30px] h-[2px] my-2 block bg-[#e2e4e7];
+html {
+  scroll-behavior: smooth;
 }
 
-.hamburger-active > span:nth-child(1) {
-  @apply rotate-45;
+/*===== LAYOUT =====*/
+.bd-grid {
+  max-width: 1024px;
+  display: grid;
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
-.hamburger-active > span:nth-child(2) {
-  @apply scale-0;
+.l-header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  background-color: #fff;
+  box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
+  padding: 0 20px;
 }
 
-.hamburger-active > span:nth-child(3) {
-  @apply -rotate-45;
+/*===== NAV =====*/
+.nav {
+  height: 3rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 767px) {
+  .nav__menu {
+    position: fixed;
+    top: 3rem;
+    right: -100%;
+    width: 80%;
+    height: 100%;
+    padding: 2rem;
+    background-color: hsl(224, 56%, 12%);
+    transition: 0.5s;
+  }
+}
+
+.nav__item {
+  margin-bottom: 2rem;
+}
+
+.nav__link {
+  position: relative;
+  color: #fff;
+}
+
+.nav__link:hover {
+  position: relative;
+}
+
+.nav__link:hover::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0.18rem;
+  left: 0;
+  top: 2rem;
+  background-color: hsl(0deg 49.88% 49.35%);
+}
+
+.nav__logo {
+  color: hsl(224, 56%, 12%);
+}
+
+.nav__toggle {
+  color: hsl(224, 56%, 12%);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+/*Active menu*/
+.nav__active::after {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 0.18rem;
+  left: 0;
+  top: 2rem;
+  background-color: hsl(0deg 49.88% 49.35%);
+}
+
+/*=== Show menu ===*/
+.show {
+  right: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .nav {
+    height: 4.5rem;
+  }
+  .nav__list {
+    display: flex;
+    padding-top: 0;
+  }
+  .nav__item {
+    margin-left: 3rem;
+    margin-bottom: 0;
+  }
+  .nav__toggle {
+    display: none;
+  }
+  .nav__link {
+    color: hsl(224, 56%, 12%);
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .bd-grid {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .slider {
   width: 1000px;
-  max-width: 100vw;
   height: 500px;
+  max-width: 1024px;
   margin: auto;
   position: relative;
   overflow: hidden;
   margin-top: 20px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
 }
 
 .list {
@@ -45,10 +155,8 @@
 
 .list img {
   width: 1000px;
-  max-width: 100vw;
   height: 100%;
   object-fit: cover;
-  border-radius: 10px;
 }
 
 .buttons {
@@ -64,11 +172,9 @@
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #fff5;
+  background-color: rgba(32, 32, 32, 0.333);
   color: #fff;
   border: none;
-  font-family: monospace;
-  font-weight: bold;
 }
 
 .dots {
@@ -90,25 +196,52 @@
   margin: 20px;
   border-radius: 20px;
   transition: 1s;
+  cursor: pointer;
 }
 
 .dots li.active {
   width: 30px;
 }
 
+@media screen and (max-width: 1024px) {
+  .slider {
+    width: 700px;
+    height: 350px;
+  }
+
+  .list img {
+    width: 700px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .slider {
-    width: 340px;
+    width: 500px;
     height: 280px;
   }
 
   .list img {
-    width: 340px;
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .slider {
+    width: 300px;
+    height: 200px;
+  }
+
+  .list img {
+    width: 300px;
   }
 
   .dots li {
-    margin: 13px;
-    border-radius: 20px;
-    transition: 1s;
+    width: 8px;
+    height: 8px;
+    margin: 10px;
+  }
+
+  .dots li.active {
+    width: 20px;
   }
 }
