--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -27,7 +27,7 @@ html {
   top: 0;
   left: 0;
   z-index: 100;
-  background-color: #fff;
+  background-color: #000;
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
   padding: 0 20px;
 }
@@ -49,7 +49,7 @@ html {
     width: 80%;
     height: 100%;
     padding: 2rem;
-    background-color: hsl(224, 56%, 12%);
+    background-color: #000;
     transition: 0.5s;
   }
 }
@@ -82,7 +82,7 @@ html {
 }
 
 .nav__toggle {
-  color: hsl(224, 56%, 12%);
+  color: hsl(0, 0%, 85%);
   font-size: 1.5rem;
   cursor: pointer;
 }
@@ -119,7 +119,7 @@ html {
     display: none;
   }
   .nav__link {
-    color: hsl(224, 56%, 12%);
+    color: hsl(220, 6%, 90%);
   }
 }
 
@@ -225,7 +225,7 @@ html {
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 530px) {
   .slider {
     width: 300px;
     height: 200px;
@@ -233,6 +233,27 @@ html {
 
   .list img {
     width: 300px;
+  }
+
+  .dots li {
+    width: 8px;
+    height: 8px;
+    margin: 10px;
+  }
+
+  .dots li.active {
+    width: 20px;
+  }
+}
+
+@media screen and (max-width: 321px) {
+  .slider {
+    width: 250px;
+    height: 200px;
+  }
+
+  .list img {
+    width: 250px;
   }
 
   .dots li {
